Cleanup, begin library.

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,9 @@
-all:
+.PHONY: all compile serve
+
+all: compile serve
+
+compile:
+	coffee -c -o lib src/*.coffee
+
+serve:
 	python -m SimpleHTTPServer
