--- a/examples/client/Makefile
+++ b/examples/client/Makefile
@@ -1,9 +1,2 @@
-.PHONY: all compile serve
-
-all: compile serve
-
-compile:
-	coffee -c -o ../../lib ../../src/*.coffee
-
-serve:
+all:
 	python -m SimpleHTTPServer
