--- a/package.json
+++ b/package.json
@@ -2,8 +2,23 @@
   "name": "webcast.js",
   "version": "1.0.0",
   "homepage": "https://github.com/webcast/webcast.js",
-  "authors": [
-    "Romain Beauxis <toots@rastageeks.org>"
-  ],
-  "description": "The webcast protocol is used to send multimedia data to a streaming server using websockets. It is designed to be implemented in browsers, thus providing a readily available browser client to stream local files and live media (webcam video, microphone audio)."
+  "main": "./dist/webcast.js",
+  "types": "./dist/webcast.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "lint": "eslint '**/*.{ts,json}' --fix",
+    "format": "prettier '**/*.{ts,json}' .prettierrc --write",
+    "typecheck": "tsc --noEmit"
+  },
+  "authors": ["Romain Beauxis <toots@rastageeks.org>"],
+  "description": "The webcast protocol is used to send multimedia data to a streaming server using websockets. It is designed to be implemented in browsers, thus providing a readily available browser client to stream local files and live media (webcam video, microphone audio).",
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.2"
+  }
 }
