--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ server/node_modules
 websocket-test.*
 *.sw*
 node_modules
-.tsbuildinfo
+tsconfig.tsbuildinfo
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
